Parser.output
   0  $accept : %entry% $end

   1  program : mdecls mstmts EOF

   2  ctype : VOID
   3        | INT
   4        | ctype STAR

   5  margs :
   6        | args

   7  args : exp
   8       | exp COMMA args

   9  exp : exp PLUS exp
  10      | exp MINUS exp
  11      | exp STAR exp
  12      | exp DIVIDE exp
  13      | MINUS exp
  14      | ID
  15      | NUM
  16      | exp LBRACK exp RBRACK
  17      | STAR exp
  18      | AMP exp
  19      | ID LPAR margs RPAR
  20      | exp PLUSPLUS
  21      | PLUSPLUS exp
  22      | LPAR exp RPAR

  23  cond : exp EQEQ exp
  24       | exp LESS exp
  25       | cond AND cond
  26       | cond OR cond
  27       | NOT cond
  28       | TRUE
  29       | FALSE
  30       | LPAR cond RPAR

  31  mdecls :
  32         | decls

  33  decls : decl
  34        | decl decls

  35  decl : ctype ID brackets SEMI
  36       | ctype ID LPAR margns RPAR LBRACE mdecls mstmts return RBRACE

  37  mstmts :
  38         | stmts

  39  stmts : stmt
  40        | stmt stmts

  41  stmt : SEMI
  42       | exp SEMI
  43       | exp EQ exp SEMI
  44       | IF LPAR cond RPAR stmt
  45       | IF LPAR cond RPAR stmt ELSE stmt
  46       | SWITCH LPAR exp RPAR LBRACE cases RBRACE
  47       | WHILE LPAR cond RPAR stmt
  48       | FOR LPAR stmt cond SEMI stmt RPAR stmt
  49       | BREAK SEMI
  50       | CONTINUE SEMI
  51       | PRINTSTR LPAR STRING RPAR SEMI
  52       | PRINTINT LPAR exp RPAR SEMI
  53       | LBRACE stmts RBRACE

  54  return : RETURN exp SEMI
  55         | RETURN SEMI

  56  brackets :
  57           | LBRACK NUM RBRACK brackets

  58  cases : CASE NUM COLON stmts default
  59        | CASE NUM COLON stmts cases

  60  default : DEFAULT COLON stmts

  61  margns :
  62         | argns

  63  argns : ctype ID
  64        | ctype ID COMMA argns

  65  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (65)
	mdecls : .  (31)

	INT  shift 3
	VOID  shift 4
	NUM  reduce 31
	ID  reduce 31
	MINUS  reduce 31
	STAR  reduce 31
	PLUSPLUS  reduce 31
	AMP  reduce 31
	LBRACE  reduce 31
	LPAR  reduce 31
	SEMI  reduce 31
	IF  reduce 31
	FOR  reduce 31
	WHILE  reduce 31
	SWITCH  reduce 31
	BREAK  reduce 31
	CONTINUE  reduce 31
	PRINTSTR  reduce 31
	PRINTINT  reduce 31
	EOF  reduce 31

	program  goto 5
	mdecls  goto 6
	ctype  goto 7
	decls  goto 8
	decl  goto 9


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	ctype : INT .  (3)

	.  reduce 3


state 4
	ctype : VOID .  (2)

	.  reduce 2


state 5
	%entry% : '\001' program .  (65)

	.  reduce 65


state 6
	program : mdecls . mstmts EOF  (1)
	mstmts : .  (37)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LBRACE  shift 16
	LPAR  shift 17
	SEMI  shift 18
	IF  shift 19
	FOR  shift 20
	WHILE  shift 21
	SWITCH  shift 22
	BREAK  shift 23
	CONTINUE  shift 24
	PRINTSTR  shift 25
	PRINTINT  shift 26
	EOF  reduce 37

	mstmts  goto 27
	exp  goto 28
	stmts  goto 29
	stmt  goto 30


state 7
	ctype : ctype . STAR  (4)
	decl : ctype . ID brackets SEMI  (35)
	decl : ctype . ID LPAR margns RPAR LBRACE mdecls mstmts return RBRACE  (36)

	ID  shift 31
	STAR  shift 32
	.  error


state 8
	mdecls : decls .  (32)

	.  reduce 32


state 9
	decls : decl .  (33)
	decls : decl . decls  (34)

	INT  shift 3
	VOID  shift 4
	NUM  reduce 33
	ID  reduce 33
	MINUS  reduce 33
	STAR  reduce 33
	PLUSPLUS  reduce 33
	AMP  reduce 33
	LBRACE  reduce 33
	LPAR  reduce 33
	SEMI  reduce 33
	IF  reduce 33
	FOR  reduce 33
	WHILE  reduce 33
	SWITCH  reduce 33
	BREAK  reduce 33
	CONTINUE  reduce 33
	RETURN  reduce 33
	PRINTSTR  reduce 33
	PRINTINT  reduce 33
	EOF  reduce 33

	ctype  goto 7
	decls  goto 33
	decl  goto 9


state 10
	exp : NUM .  (15)

	.  reduce 15


state 11
	exp : ID .  (14)
	exp : ID . LPAR margs RPAR  (19)

	LPAR  shift 34
	PLUS  reduce 14
	MINUS  reduce 14
	STAR  reduce 14
	DIVIDE  reduce 14
	PLUSPLUS  reduce 14
	EQEQ  reduce 14
	LESS  reduce 14
	AND  reduce 14
	OR  reduce 14
	LBRACK  reduce 14
	RBRACK  reduce 14
	RPAR  reduce 14
	EQ  reduce 14
	SEMI  reduce 14
	COMMA  reduce 14


state 12
	exp : MINUS . exp  (13)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 35


state 13
	exp : STAR . exp  (17)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 36


state 14
	exp : PLUSPLUS . exp  (21)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 37


state 15
	exp : AMP . exp  (18)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 38


state 16
	stmt : LBRACE . stmts RBRACE  (53)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LBRACE  shift 16
	LPAR  shift 17
	SEMI  shift 18
	IF  shift 19
	FOR  shift 20
	WHILE  shift 21
	SWITCH  shift 22
	BREAK  shift 23
	CONTINUE  shift 24
	PRINTSTR  shift 25
	PRINTINT  shift 26
	.  error

	exp  goto 28
	stmts  goto 39
	stmt  goto 30


state 17
	exp : LPAR . exp RPAR  (22)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 40


state 18
	stmt : SEMI .  (41)

	.  reduce 41


state 19
	stmt : IF . LPAR cond RPAR stmt  (44)
	stmt : IF . LPAR cond RPAR stmt ELSE stmt  (45)

	LPAR  shift 41
	.  error


state 20
	stmt : FOR . LPAR stmt cond SEMI stmt RPAR stmt  (48)

	LPAR  shift 42
	.  error


state 21
	stmt : WHILE . LPAR cond RPAR stmt  (47)

	LPAR  shift 43
	.  error


state 22
	stmt : SWITCH . LPAR exp RPAR LBRACE cases RBRACE  (46)

	LPAR  shift 44
	.  error


state 23
	stmt : BREAK . SEMI  (49)

	SEMI  shift 45
	.  error


state 24
	stmt : CONTINUE . SEMI  (50)

	SEMI  shift 46
	.  error


state 25
	stmt : PRINTSTR . LPAR STRING RPAR SEMI  (51)

	LPAR  shift 47
	.  error


state 26
	stmt : PRINTINT . LPAR exp RPAR SEMI  (52)

	LPAR  shift 48
	.  error


state 27
	program : mdecls mstmts . EOF  (1)

	EOF  shift 49
	.  error


state 28
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)
	stmt : exp . SEMI  (42)
	stmt : exp . EQ exp SEMI  (43)

	PLUS  shift 50
	MINUS  shift 51
	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	LBRACK  shift 55
	EQ  shift 56
	SEMI  shift 57
	.  error


state 29
	mstmts : stmts .  (38)

	.  reduce 38


state 30
	stmts : stmt .  (39)
	stmts : stmt . stmts  (40)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LBRACE  shift 16
	LPAR  shift 17
	SEMI  shift 18
	IF  shift 19
	FOR  shift 20
	WHILE  shift 21
	SWITCH  shift 22
	BREAK  shift 23
	CONTINUE  shift 24
	PRINTSTR  shift 25
	PRINTINT  shift 26
	RBRACE  reduce 39
	CASE  reduce 39
	RETURN  reduce 39
	DEFAULT  reduce 39
	EOF  reduce 39

	exp  goto 28
	stmts  goto 58
	stmt  goto 30


state 31
	decl : ctype ID . brackets SEMI  (35)
	decl : ctype ID . LPAR margns RPAR LBRACE mdecls mstmts return RBRACE  (36)
	brackets : .  (56)

	LBRACK  shift 59
	LPAR  shift 60
	SEMI  reduce 56

	brackets  goto 61


state 32
	ctype : ctype STAR .  (4)

	.  reduce 4


state 33
	decls : decl decls .  (34)

	.  reduce 34


state 34
	exp : ID LPAR . margs RPAR  (19)
	margs : .  (5)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	RPAR  reduce 5

	margs  goto 62
	args  goto 63
	exp  goto 64


35: shift/reduce conflict (shift 54, reduce 13) on PLUSPLUS
state 35
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : MINUS exp .  (13)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)

	PLUSPLUS  shift 54
	LBRACK  shift 55
	PLUS  reduce 13
	MINUS  reduce 13
	STAR  reduce 13
	DIVIDE  reduce 13
	EQEQ  reduce 13
	LESS  reduce 13
	AND  reduce 13
	OR  reduce 13
	RBRACK  reduce 13
	RPAR  reduce 13
	EQ  reduce 13
	SEMI  reduce 13
	COMMA  reduce 13


36: shift/reduce conflict (shift 54, reduce 17) on PLUSPLUS
state 36
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : STAR exp .  (17)
	exp : exp . PLUSPLUS  (20)

	PLUSPLUS  shift 54
	LBRACK  shift 55
	PLUS  reduce 17
	MINUS  reduce 17
	STAR  reduce 17
	DIVIDE  reduce 17
	EQEQ  reduce 17
	LESS  reduce 17
	AND  reduce 17
	OR  reduce 17
	RBRACK  reduce 17
	RPAR  reduce 17
	EQ  reduce 17
	SEMI  reduce 17
	COMMA  reduce 17


37: shift/reduce conflict (shift 54, reduce 21) on PLUSPLUS
state 37
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)
	exp : PLUSPLUS exp .  (21)

	PLUSPLUS  shift 54
	LBRACK  shift 55
	PLUS  reduce 21
	MINUS  reduce 21
	STAR  reduce 21
	DIVIDE  reduce 21
	EQEQ  reduce 21
	LESS  reduce 21
	AND  reduce 21
	OR  reduce 21
	RBRACK  reduce 21
	RPAR  reduce 21
	EQ  reduce 21
	SEMI  reduce 21
	COMMA  reduce 21


38: shift/reduce conflict (shift 54, reduce 18) on PLUSPLUS
state 38
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : AMP exp .  (18)
	exp : exp . PLUSPLUS  (20)

	PLUSPLUS  shift 54
	LBRACK  shift 55
	PLUS  reduce 18
	MINUS  reduce 18
	STAR  reduce 18
	DIVIDE  reduce 18
	EQEQ  reduce 18
	LESS  reduce 18
	AND  reduce 18
	OR  reduce 18
	RBRACK  reduce 18
	RPAR  reduce 18
	EQ  reduce 18
	SEMI  reduce 18
	COMMA  reduce 18


state 39
	stmt : LBRACE stmts . RBRACE  (53)

	RBRACE  shift 65
	.  error


state 40
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)
	exp : LPAR exp . RPAR  (22)

	PLUS  shift 50
	MINUS  shift 51
	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	LBRACK  shift 55
	RPAR  shift 66
	.  error


state 41
	stmt : IF LPAR . cond RPAR stmt  (44)
	stmt : IF LPAR . cond RPAR stmt ELSE stmt  (45)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	NOT  shift 67
	TRUE  shift 68
	FALSE  shift 69
	LPAR  shift 70
	.  error

	exp  goto 71
	cond  goto 72


state 42
	stmt : FOR LPAR . stmt cond SEMI stmt RPAR stmt  (48)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LBRACE  shift 16
	LPAR  shift 17
	SEMI  shift 18
	IF  shift 19
	FOR  shift 20
	WHILE  shift 21
	SWITCH  shift 22
	BREAK  shift 23
	CONTINUE  shift 24
	PRINTSTR  shift 25
	PRINTINT  shift 26
	.  error

	exp  goto 28
	stmt  goto 73


state 43
	stmt : WHILE LPAR . cond RPAR stmt  (47)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	NOT  shift 67
	TRUE  shift 68
	FALSE  shift 69
	LPAR  shift 70
	.  error

	exp  goto 71
	cond  goto 74


state 44
	stmt : SWITCH LPAR . exp RPAR LBRACE cases RBRACE  (46)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 75


state 45
	stmt : BREAK SEMI .  (49)

	.  reduce 49


state 46
	stmt : CONTINUE SEMI .  (50)

	.  reduce 50


state 47
	stmt : PRINTSTR LPAR . STRING RPAR SEMI  (51)

	STRING  shift 76
	.  error


state 48
	stmt : PRINTINT LPAR . exp RPAR SEMI  (52)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 77


state 49
	program : mdecls mstmts EOF .  (1)

	.  reduce 1


state 50
	exp : exp PLUS . exp  (9)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 78


state 51
	exp : exp MINUS . exp  (10)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 79


state 52
	exp : exp STAR . exp  (11)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 80


state 53
	exp : exp DIVIDE . exp  (12)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 81


state 54
	exp : exp PLUSPLUS .  (20)

	.  reduce 20


state 55
	exp : exp LBRACK . exp RBRACK  (16)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 82


state 56
	stmt : exp EQ . exp SEMI  (43)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	exp  goto 83


state 57
	stmt : exp SEMI .  (42)

	.  reduce 42


state 58
	stmts : stmt stmts .  (40)

	.  reduce 40


state 59
	brackets : LBRACK . NUM RBRACK brackets  (57)

	NUM  shift 84
	.  error


state 60
	decl : ctype ID LPAR . margns RPAR LBRACE mdecls mstmts return RBRACE  (36)
	margns : .  (61)

	INT  shift 3
	VOID  shift 4
	RPAR  reduce 61

	ctype  goto 85
	margns  goto 86
	argns  goto 87


state 61
	decl : ctype ID brackets . SEMI  (35)

	SEMI  shift 88
	.  error


state 62
	exp : ID LPAR margs . RPAR  (19)

	RPAR  shift 89
	.  error


state 63
	margs : args .  (6)

	.  reduce 6


state 64
	args : exp .  (7)
	args : exp . COMMA args  (8)
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)

	PLUS  shift 50
	MINUS  shift 51
	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	LBRACK  shift 55
	COMMA  shift 90
	RPAR  reduce 7


state 65
	stmt : LBRACE stmts RBRACE .  (53)

	.  reduce 53


state 66
	exp : LPAR exp RPAR .  (22)

	.  reduce 22


state 67
	cond : NOT . cond  (27)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	NOT  shift 67
	TRUE  shift 68
	FALSE  shift 69
	LPAR  shift 70
	.  error

	exp  goto 71
	cond  goto 91


state 68
	cond : TRUE .  (28)

	.  reduce 28


state 69
	cond : FALSE .  (29)

	.  reduce 29


state 70
	exp : LPAR . exp RPAR  (22)
	cond : LPAR . cond RPAR  (30)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	NOT  shift 67
	TRUE  shift 68
	FALSE  shift 69
	LPAR  shift 70
	.  error

	exp  goto 92
	cond  goto 93


state 71
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)
	cond : exp . EQEQ exp  (23)
	cond : exp . LESS exp  (24)

	PLUS  shift 50
	MINUS  shift 51
	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	EQEQ  shift 94
	LESS  shift 95
	LBRACK  shift 55
	.  error


state 72
	cond : cond . AND cond  (25)
	cond : cond . OR cond  (26)
	stmt : IF LPAR cond . RPAR stmt  (44)
	stmt : IF LPAR cond . RPAR stmt ELSE stmt  (45)

	AND  shift 96
	OR  shift 97
	RPAR  shift 98
	.  error


state 73
	stmt : FOR LPAR stmt . cond SEMI stmt RPAR stmt  (48)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	NOT  shift 67
	TRUE  shift 68
	FALSE  shift 69
	LPAR  shift 70
	.  error

	exp  goto 71
	cond  goto 99


state 74
	cond : cond . AND cond  (25)
	cond : cond . OR cond  (26)
	stmt : WHILE LPAR cond . RPAR stmt  (47)

	AND  shift 96
	OR  shift 97
	RPAR  shift 100
	.  error


state 75
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)
	stmt : SWITCH LPAR exp . RPAR LBRACE cases RBRACE  (46)

	PLUS  shift 50
	MINUS  shift 51
	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	LBRACK  shift 55
	RPAR  shift 101
	.  error


state 76
	stmt : PRINTSTR LPAR STRING . RPAR SEMI  (51)

	RPAR  shift 102
	.  error


state 77
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)
	stmt : PRINTINT LPAR exp . RPAR SEMI  (52)

	PLUS  shift 50
	MINUS  shift 51
	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	LBRACK  shift 55
	RPAR  shift 103
	.  error


78: shift/reduce conflict (shift 54, reduce 9) on PLUSPLUS
state 78
	exp : exp . PLUS exp  (9)
	exp : exp PLUS exp .  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)

	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	LBRACK  shift 55
	PLUS  reduce 9
	MINUS  reduce 9
	EQEQ  reduce 9
	LESS  reduce 9
	AND  reduce 9
	OR  reduce 9
	RBRACK  reduce 9
	RPAR  reduce 9
	EQ  reduce 9
	SEMI  reduce 9
	COMMA  reduce 9


79: shift/reduce conflict (shift 54, reduce 10) on PLUSPLUS
state 79
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp MINUS exp .  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)

	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	LBRACK  shift 55
	PLUS  reduce 10
	MINUS  reduce 10
	EQEQ  reduce 10
	LESS  reduce 10
	AND  reduce 10
	OR  reduce 10
	RBRACK  reduce 10
	RPAR  reduce 10
	EQ  reduce 10
	SEMI  reduce 10
	COMMA  reduce 10


80: shift/reduce conflict (shift 54, reduce 11) on PLUSPLUS
state 80
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp STAR exp .  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)

	PLUSPLUS  shift 54
	LBRACK  shift 55
	PLUS  reduce 11
	MINUS  reduce 11
	STAR  reduce 11
	DIVIDE  reduce 11
	EQEQ  reduce 11
	LESS  reduce 11
	AND  reduce 11
	OR  reduce 11
	RBRACK  reduce 11
	RPAR  reduce 11
	EQ  reduce 11
	SEMI  reduce 11
	COMMA  reduce 11


81: shift/reduce conflict (shift 54, reduce 12) on PLUSPLUS
state 81
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp DIVIDE exp .  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)

	PLUSPLUS  shift 54
	LBRACK  shift 55
	PLUS  reduce 12
	MINUS  reduce 12
	STAR  reduce 12
	DIVIDE  reduce 12
	EQEQ  reduce 12
	LESS  reduce 12
	AND  reduce 12
	OR  reduce 12
	RBRACK  reduce 12
	RPAR  reduce 12
	EQ  reduce 12
	SEMI  reduce 12
	COMMA  reduce 12


state 82
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp LBRACK exp . RBRACK  (16)
	exp : exp . PLUSPLUS  (20)

	PLUS  shift 50
	MINUS  shift 51
	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	LBRACK  shift 55
	RBRACK  shift 104
	.  error


state 83
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)
	stmt : exp EQ exp . SEMI  (43)

	PLUS  shift 50
	MINUS  shift 51
	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	LBRACK  shift 55
	SEMI  shift 105
	.  error


state 84
	brackets : LBRACK NUM . RBRACK brackets  (57)

	RBRACK  shift 106
	.  error


state 85
	ctype : ctype . STAR  (4)
	argns : ctype . ID  (63)
	argns : ctype . ID COMMA argns  (64)

	ID  shift 107
	STAR  shift 32
	.  error


state 86
	decl : ctype ID LPAR margns . RPAR LBRACE mdecls mstmts return RBRACE  (36)

	RPAR  shift 108
	.  error


state 87
	margns : argns .  (62)

	.  reduce 62


state 88
	decl : ctype ID brackets SEMI .  (35)

	.  reduce 35


state 89
	exp : ID LPAR margs RPAR .  (19)

	.  reduce 19


state 90
	args : exp COMMA . args  (8)

	NUM  shift 10
	ID  shift 11
	MINUS  shift 12
	STAR  shift 13
	PLUSPLUS  shift 14
	AMP  shift 15
	LPAR  shift 17
	.  error

	args  goto 109
	exp  goto 64


state 91
	cond : cond . AND cond  (25)
	cond : cond . OR cond  (26)
	cond : NOT cond .  (27)

	.  reduce 27


state 92
	exp : exp . PLUS exp  (9)
	exp : exp . MINUS exp  (10)
	exp : exp . STAR exp  (11)
	exp : exp . DIVIDE exp  (12)
	exp : exp . LBRACK exp RBRACK  (16)
	exp : exp . PLUSPLUS  (20)
	exp : LPAR exp . RPAR  (22)
	cond : exp . EQEQ exp  (23)
	cond : exp . LESS exp  (24)

	PLUS  shift 50
	MINUS  shift 51
	STAR  shift 52
	DIVIDE  shift 53
	PLUSPLUS  shift 54
	EQEQ  shift 94
	LESS  shift 95
	LBRACK  shift 55
	RPAR  shift 66
	.  error

